# internal/domain/model/update_song.go
@@ -8,3 +8,10 @@ type UpdateSong struct {
 	Link        string `json:"link,omitempty"`
 	Text        string `json:"text,omitempty"`
 }
+
+type UpdateSongSwagger struct {
+	Song        string `json:"song,omitempty"`
+	Group       string `json:"group,omitempty"`
+	ReleaseDate string `json:"releaseDate,omitempty"`
+	Link        string `json:"link,omitempty"`
+}
